--- a/my-app/backend/config/config.json
+++ b/my-app/backend/config/config.json
@@ -1,41 +1,44 @@
 {
-    "development": {
-      "username": "gabestevens",
-      "password": "QG5etVSidg9T",
-      "database": "neondb",
-      "host": "ep-summer-snow-041342.us-east-2.aws.neon.tech",
-      "dialect": "postgres",
-      "dialectOptions": {
-        "ssl": {
-          "require": "true",
-          "rejectUnauthorized": "false"
-        }
+  "development": {
+    "username": "gabestevens",
+    "password": "QG5etVSidg9T",
+    "database": "neondb",
+    "host": "ep-summer-snow-041342.us-east-2.aws.neon.tech",
+    "dialect": "postgres",
+    "dialectOptions": {
+      "ssl": {
+        "require": "true",
+        "rejectUnauthorized": "false",
+        "connectionTimeout": 60000
       }
-    },
-    "test": {
-      "username": "gabestevens",
-      "password": "QG5etVSidg9T",
-      "database": "neondb",
-      "host": "ep-summer-snow-041342.us-east-2.aws.neon.tech",
-      "dialect": "postgres",
-      "dialectOptions": {
-        "ssl": {
-          "require": "true",
-          "rejectUnauthorized": "false"
-        }
+    }
+  },
+  "test": {
+    "username": "gabestevens",
+    "password": "QG5etVSidg9T",
+    "database": "neondb",
+    "host": "ep-summer-snow-041342.us-east-2.aws.neon.tech",
+    "dialect": "postgres",
+    "dialectOptions": {
+      "ssl": {
+        "require": "true",
+        "rejectUnauthorized": "false",
+        "connectionTimeout": 60000
       }
-    },
-    "production": {
-      "username": "gabestevens",
-      "password": "QG5etVSidg9T",
-      "database": "neondb",
-      "host": "ep-summer-snow-041342.us-east-2.aws.neon.tech",
-      "dialect": "postgres",
-      "dialectOptions": {
-        "ssl": {
-          "require": "true",
-          "rejectUnauthorized": "false"
-        }
+    }
+  },
+  "production": {
+    "username": "gabestevens",
+    "password": "QG5etVSidg9T",
+    "database": "neondb",
+    "host": "ep-summer-snow-041342.us-east-2.aws.neon.tech",
+    "dialect": "postgres",
+    "dialectOptions": {
+      "ssl": {
+        "require": "true",
+        "rejectUnauthorized": "false",
+        "connectionTimeout": 60000
       }
     }
   }
+}
