--- a/my-app/backend/config/config.json
+++ b/my-app/backend/config/config.json
@@ -1,21 +1,15 @@
 {
   "development": {
-    "username": "gabestevens",
-    "password": "QG5etVSidg9T",
-    "database": "neondb",
-    "host": "ep-summer-snow-041342.us-east-2.aws.neon.tech",
-    "dialect": "postgres",
-    "dialectOptions": {
-      "ssl": {
-        "require": "true",
-        "rejectUnauthorized": "false",
-        "connectionTimeout": 60000
-      }
-    }
+    "username": "postgres",
+    "password": "EIkZ1XouvnzSO6f6",
+    "database": "postgres",
+    "host": "db.itkjevomyvragtzhejlx.supabase.co",
+    "port": "5432",
+    "dialect": "postgres"
   },
   "test": {
     "username": "gabestevens",
-    "password": "QG5etVSidg9T",
+    "password": "i%#TV3Q3h!qGW8A",
     "database": "neondb",
     "host": "ep-summer-snow-041342.us-east-2.aws.neon.tech",
     "dialect": "postgres",
@@ -29,7 +23,7 @@
   },
   "production": {
     "username": "gabestevens",
-    "password": "QG5etVSidg9T",
+    "password": "i%#TV3Q3h!qGW8A",
     "database": "neondb",
     "host": "ep-summer-snow-041342.us-east-2.aws.neon.tech",
     "dialect": "postgres",
