plug me in im alive tonight out on the streets again

--- a/my-app/backend/config/config.json
+++ b/my-app/backend/config/config.json
@@ -1,15 +1,14 @@
 {
   "development": {
-    "username": "postgres",
-    "password": "EIkZ1XouvnzSO6f6",
-    "database": "postgres",
-    "host": "db.itkjevomyvragtzhejlx.supabase.co",
-    "port": "5432",
+    "username": "gvzcgkyt",
+    "password": "3G4f3KouZLzGr5mX1L7p3_HIObrAreJU",
+    "database": "gvzcgkyt",
+    "host": "mahmud.db.elephantsql.com",
     "dialect": "postgres"
   },
   "test": {
     "username": "gabestevens",
-    "password": "i%#TV3Q3h!qGW8A",
+    "password": "QG5etVSidg9T",
     "database": "neondb",
     "host": "ep-summer-snow-041342.us-east-2.aws.neon.tech",
     "dialect": "postgres",
@@ -23,7 +22,7 @@
   },
   "production": {
     "username": "gabestevens",
-    "password": "i%#TV3Q3h!qGW8A",
+    "password": "QG5etVSidg9T",
     "database": "neondb",
     "host": "ep-summer-snow-041342.us-east-2.aws.neon.tech",
     "dialect": "postgres",
