--- a/my-app/backend/config/config.json
+++ b/my-app/backend/config/config.json
@@ -1,13 +1,14 @@
 {
   "development": {
-    "username": "gvzcgkyt",
-    "password": "3G4f3KouZLzGr5mX1L7p3_HIObrAreJU",
-    "database": "gvzcgkyt",
-    "host": "mahmud.db.elephantsql.com",
+    "username": "postgres",
+    "password": "EIkZ1XouvnzSO6f6",
+    "database": "postgres",
+    "host": "db.itkjevomyvragtzhejlx.supabase.co",
+    "port": "5432",
     "dialect": "postgres"
   },
   "test": {
-    "username": "gabestevens",
+    "username": "alexschmidt76",
     "password": "QG5etVSidg9T",
     "database": "neondb",
     "host": "ep-summer-snow-041342.us-east-2.aws.neon.tech",
@@ -21,7 +22,7 @@
     }
   },
   "production": {
-    "username": "gabestevens",
+    "username": "alexschmidt76",
     "password": "QG5etVSidg9T",
     "database": "neondb",
     "host": "ep-summer-snow-041342.us-east-2.aws.neon.tech",
